# ai-lab-final

./: .env.example  .gitignore  Makefile  README.md
backend/: .env.example  README.md  pyproject.toml
backend/src/app/: main.py
backend/src/app/api/: routes.py
backend/src/app/collectors/: __init__.py  discovery.py  scraper.py
backend/src/app/collectors/discovery/: __init__.py  base.py  bestbuy.py  service.py
backend/src/app/collectors/product_pages/: __init__.py  base.py  target.py  (+1 more)
backend/src/app/config/: settings.py
backend/src/app/evaluation/: compare.py
backend/src/app/imagegen/: __init__.py  base.py  openai_adapter.py  prompts.py  providers.py  stability_adapter.py
backend/src/app/llm/: __init__.py  client.py  prompts.py
backend/src/app/models/: __init__.py  schemas.py
backend/src/app/retrieval/: __init__.py  base.py  local.py  managed.py
backend/src/app/services/: __init__.py  corpus.py  dashboard_data.py  evaluation.py  image_generation.py  manifests.py  verification.py  visual_profiles.py
backend/src/app/utils/: artifacts.py  logging.py
backend/src/app/workflow/: __init__.py  agents.py  orchestrator.py
backend/src/cli/: main.py
backend/tests/: test_api.py  test_cli.py  test_corpus.py  test_discovery_parser.py  test_evaluation.py  test_image_generation.py  test_imports.py  test_llm_client.py  test_product_scraping.py  test_verification.py  test_visual_profiles.py  test_workflow.py
backend/tests/fixtures/discovery/: bestbuy_search_fixture.html
backend/tests/fixtures/product_pages/: target_pdp_response.json  target_product_page.html
(+174 files in other folders)
