[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "product-image-from-reviews"
version = "0.1.0"
description = "CMU final project: Generating Product Image from Customer Reviews"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "xinxuxin" }
]
dependencies = [
  "beautifulsoup4>=4.12.3",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "structlog>=24.4.0",
  "tenacity>=9.0.0",
  "typer>=0.12.3",
  "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
  "black>=24.8.0",
  "mypy>=1.11.1",
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.1",
]

[project.scripts]
project-cli = "cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/app", "src/cli"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
plugins = []

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
